--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -72,8 +72,8 @@
     <script type="text/javascript">
       window._gaq = window._gaq || [];
     {%- if not hide_analytics -%}
-      _gaq.push(['_setAccount', 'UA-6742635-1']);
-      _gaq.push(['_setDomainName', '.khanacademy.org']);
+      _gaq.push(['_setAccount', 'UA-28120495-1']);
+      _gaq.push(['_setDomainName', '.khanacademie.nl']);
       _gaq.push(['_trackPageview']);
       _gaq.push(['_trackPageLoadTime']);
       {% for variable in ga_custom_vars %}
@@ -84,8 +84,8 @@
       {% endif %}
 
       {# For OER Analytics #}
-      _gaq.push(['ht._setAccount', 'UA-5033010-1']);
-      _gaq.push(['ht._setDomainName', '.khanacademy.org']);
+      _gaq.push(['ht._setAccount', 'UA-28120495-1']);
+      _gaq.push(['ht._setDomainName', '.khanacademie.nl']);
       _gaq.push(['ht._trackPageview']);
 
       {# Mixpanel #}
