--- a/templates/page_footer_short.html
+++ b/templates/page_footer_short.html
@@ -10,6 +10,9 @@
         <span class="footer-links">
             {% if not user_data or not user_data.is_child_account() %}
             	<a href="/reportissue?type=Defect&issue_labels={{issue_labels|urlencode}}" id="report" data-tag="Footer">Fouten melden</a>
+                <span class="sep">|</span>
+                <a href="https://docs.google.com/document/pub?id=1zr1Mv2W2lmqWRI_LAp0g2GWDM0duIoK38Y6NGwtBJ-c">Gebruiksvoorwaarden</a>
+                <a href="/https://docs.google.com/document/pub?id=1kE2AEEdjqLPBI_sdiGCLhzkSXEsf3-5xaqY2bMmPmqo">Privacybeleid</a>
             {% endif %}
             {% if is_mobile_capable %}
                 <span class="sep">|</span>
