--- a/templates/page_footer_short.html
+++ b/templates/page_footer_short.html
@@ -12,6 +12,7 @@
             	<a href="/reportissue?type=Defect&issue_labels={{issue_labels|urlencode}}" id="report" data-tag="Footer">Fouten melden</a>
                 <span class="sep">|</span>
                 <a href="https://docs.google.com/document/pub?id=1zr1Mv2W2lmqWRI_LAp0g2GWDM0duIoK38Y6NGwtBJ-c">Gebruiksvoorwaarden</a>
+                <span class="sep">|</span>
                 <a href="/https://docs.google.com/document/pub?id=1kE2AEEdjqLPBI_sdiGCLhzkSXEsf3-5xaqY2bMmPmqo">Privacybeleid</a>
             {% endif %}
             {% if is_mobile_capable %}
