--- a/templates/page_footer_short.html
+++ b/templates/page_footer_short.html
@@ -13,7 +13,7 @@
                 <span class="sep">|</span>
                 <a href="https://docs.google.com/document/pub?id=1zr1Mv2W2lmqWRI_LAp0g2GWDM0duIoK38Y6NGwtBJ-c">Gebruiksvoorwaarden</a>
                 <span class="sep">|</span>
-                <a href="/https://docs.google.com/document/pub?id=1kE2AEEdjqLPBI_sdiGCLhzkSXEsf3-5xaqY2bMmPmqo">Privacybeleid</a>
+                <a href="https://docs.google.com/document/pub?id=1kE2AEEdjqLPBI_sdiGCLhzkSXEsf3-5xaqY2bMmPmqo">Privacybeleid</a>
             {% endif %}
             {% if is_mobile_capable %}
                 <span class="sep">|</span>
