--- a/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
+++ b/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
@@ -2,30 +2,30 @@
 
 {% block col1content %}
 
-	<h1>How to use this toolkit</h1>
+	<h1>Hoe gebruik ik de gereedschapskist?</h1>
 	<hr>
 		
-	<p class="lead">If you're interested in using Khan Academy at your school or in your classroom, then these resources are for you.</p> 
+	<p class="lead">Als je Khan Academie in jouw klas of jouw school wilt gebruiken, staan onze middelen vrij tot je beschikking.</p> 
 	
-	<p>Khan Academy can be used in many wonderful and creative ways, and we’re always thrilled to hear about how it’s helping to enhance student learning. Many of the suggestions in the toolkit come from classrooms currently piloting Khan Academy, and while they reflect our best knowledge of KA in classrooms to-date, other techniques may work better in your classroom. As you discover methods that work well for you, please <a href="{{base_url}}/teacher-faqs">add them to our FAQs</a>!</p> 
+	<p>Khan Academie kan op diverse, creatieve manieren gebruikt worden. Wij horen heel graag hoe jouw gebruik jouw leerlingen helpt te leren. Wij willen in onze gereedschapskist graag ervaringen van scholen en leraren verzamelen die met de Khan Academie op school werken. Hiermee kunnen anderen leraren en coaches inspiratie en ideeën opdoen over hoe zij zelf de Khan Academie in de klas kunnen gebruiken. Tot wij onze gereedschapskist kunnen vullen met ervaringen uit Nederland kun je lezen over Amerikaanse ervaringen op scholen met de Khan Academy. Wanneer jij methoden ontdekt die voor jou werken, horen wij daar graag over. Wij zijn er dan ook heel blij mee als je deze <a href="{{base_url}}/teacher-faqs"> toevoegt aan onze FAQs</a>!</p> 
 
-	<p>Depending on how you're planning to use Khan Academy in your classroom, different parts of the toolkit may be most useful to you.</p>
+	<p>Afhankelijk van hoe jij van plan bent de Khan Academie in jouw klas te gaan gebruiken, zullen verschillende delen van de gereedschapskist voor jou nuttig zijn.</p>
 	
 	<img class "image-centered" src="/images/toolkit/implementation-models-2.png"/>
 	
-	<p><strong>Supplemental models:</strong> If you’re interested in using Khan Academy as a supplemental resource (e.g., in a learning lab, as an optional or additional homework tool, as a curriculum resource), check out our sections on <a href="{{base_url}}/setting-up-accounts">setting up accounts</a>, <a href="{{base_url}}/keys-to-success">keys to success</a>, <a href="{{base_url}}/instructional-strategies">instructional strategies</a>, <a href="{{base_url}}/using-data">using data</a>, and our <a href="{{base_url}}/teacher-faqs">FAQs</a>.</p>
-	<p><strong>Individualized units:</strong> In our pilot, some teachers use Khan Academy to create individualized units, in which students cover grade-level standards at their own pace. If you're interested in using Khan Academy in this way, all of the resources here should be helpful to you. In particular, check out our sections on <a href="{{base_url}}/classroom-culture">classroom culture</a>, <a href="{{base_url}}/using-data">using data</a>, and <a href="{{base_url}}/individualized-units">individualized units</a>. </p>
-	<p><strong>Future models:</strong> We’re really excited about working with teachers and administrators who want to challenge some of the basic assumptions in education to meet each student’s needs. The possibilities are endless, but some of the ideas we’re hoping to see:</p>
-		<ul class="bullet">
-			<li>Mixed-age classes</li>
-			<li>Self-paced learning, even outside of grade-level standards (i.e., students could learn topics below or above grade level, depending on their needs)</li>
-			<li>Significant use of real-world problem-solving and meaningful project-based learning</li>
-			<li>Cross-disciplinary courses</li>
+	<p><strong>Aanvullende modellen:</strong> Als je geïnteresseerd bent in het gebruik van Khan Academie als een aanvullend middel, check dan onze sectie over <a href="{{base_url}}/setting-up-accounts">het opzetten van een account</a>, <a href="{{base_url}}/keys-to-success">sleutels tot succes</a>, <a href="{{base_url}}/instructional-strategies">instructionele strategieën</a>, <a href="{{base_url}}/using-data">gebruik van informatie</a>, en onze <a href="{{base_url}}/teacher-faqs">FAQs</a>.</p>
+	<p><strong>Geïndividualiseerde modellen:</strong> Gedurende de pilot, gebruiken sommige leraren de Khan Academie op een geïndividualiseerde manier. Dat wil zeggen dat leraren eigen lesmateriaal op de Khan Academie zullen plaatsen en hun leerlingen daarmee zullen laten werken. Wanneer je geïnteresseerd bent in het gebruik van de Khan Academie op deze manier lees dan vooral ook de sectie over <a href="{{base_url}}/Classroom culture">cultuur in de klas</a>, <a href="{{base_url}}/using-data">het gebruik van informatie</a>, en <a href="{{base_url}}/individualized-units">geïndividualiseerde secties</a>. </p>
+	<p><strong>Toekomstige modellen:</strong> We willen graag samenwerken met leraren die de uitdaging aan willen gaan om met vernieuwende methodes in het onderwijs aan de slag te gaan. De mogelijkheden zijn oneindig, maar onderwerpen die wij hopen terug te zien zijn ideeën over:</p>
+		<ul class="bullet"> 
+			<li>Gemengde (leeftijds)klassen</li>
+			<li>Leren op het eigen tempo, ook buiten de standaard groepsniveaus (i.e., Aangepast aan waar leerlingen behoefte aan hebben zouden zoals boven of onder het standaard niveau kunnen leren op het eigen tempo)</li>
+			<li>Betekenisvol gebruik van het oplossen van werkelijke wereldproblematiek en waardevol leren op projectbasis.</li>
+			<li>les geven door het combineren van disciplines</li>
 		</ul>
 
-	<p>If you’re interested in using Khan Academy to do something like that, please <a href="http://elizabethka.wufoo.com/forms/innovate-in-the-classroom-with-khan-academy/">apply here</a>.</p>
+	<p>Wanneer je geïnteresseerd bent in het gebruik van de Khan Academie voor dergelijke doeleinden <a href="http://elizabethka.wufoo.com/forms/innovate-in-the-classroom-with-khan-academy/"> meld je dan hier aan</a>.</p>
 
-	<p><a href="{{base_url}}/toolkit-sections" class="call-to-action simple-button green">Next: Sections of this site →</a></p>
+	<p><a href="{{base_url}}/toolkit-sections" class="call-to-action simple-button green">Volgende: onderdelen van deze site →</a></p>
 
 
 {% endblock col1content %}	
@@ -34,7 +34,7 @@
 <div class="callout">
 	<h3>Useful links</h3>
 	<ul class="bullet">
-		<li><a href="http://khanacademy.desk.com/customer/portal/articles/414175-what-is-the-vision-of-khan-academy-in-the-classroom-">What is the vision for KA in the classroom?</a></li>
+		<li><a href="http://khanacademy.desk.com/customer/portal/articles/414175-what-is-the-vision-of-khan-academy-in-the-classroom-">Wat is de visie van Khan Academie in de klas?</a></li>
 		
 </div>
 {% endblock col2content %}	
