--- a/templates/coach_resources/toolkit_content/index.html
+++ b/templates/coach_resources/toolkit_content/index.html
@@ -2,27 +2,27 @@
 
 {% block col1content %}
 
-	<h1>Welcome to the Teacher Toolkit!</h1>
+	<h1>Welkom bij de Gereedschapskist voor leraren!</h1>
 	<hr>
 
-    <p class="lead">We are constantly learning from inspiring teachers and students.</p>
+    <p class="lead">Wij willen blijven leren van inspirerende leraren, coaches en leerlingen.</p>
 		
-	<p>Since late 2010, we have partnered with educators using Khan Academy in classrooms. Through these partnerships we can better understand how our tools are being used in classrooms today, equipping us to build even better tools in the future. Treat this toolkit as one view on how Khan Academy can be used in the classroom; we encourage you to continue to innovate!</p>
-	<p>First, check out Sal's take on blending digital and physical learning:</p>
+	<p>Vanaf september 2012 zullen wij samenwerken met scholen die de Khan Academie in de klas gebruiken. Door deze samenwerkingsverbanden willen wij meer te weten komen over hoe onze gereedschappen in de klas worden gebruikt en hoe wij de Khan Academie kunnen verbeteren.</p>
+	<p>Allereerst, kom te weten wat Salman Khan denkt over het mixen van digitaal en fysiek leren:</p>
 	<iframe width="560" height="315" src="http://www.youtube.com/embed/0OtSs2xEpzY" frameborder="0" allowfullscreen></iframe>
-	<p><strong>Note:</strong> This toolkit is a work in progress! Please <a href="http://khanacademy.desk.com/customer/portal/questions/170780-i-wish-there-were-this-feature-on-khan-academy-">send us your feedback</a> on a) how we can improve and b) which resources you found particularly helpful. In return, we will handsomely reward you with smiles and gratitude :)</p>
+	<p><strong>Let op:</strong> Wij werken nog aan onze gereedschapskist. Wij krijgen graag <a href="http://khanacademy.desk.com/customer/portal/questions/170780-i-wish-there-were-this-feature-on-khan-academy-">jouw feedback</a> over a) hoe wij de Khan Academie kunnen verbeteren en  b) welke gereedschappen jij goed kunt gebruiken. Daar staat tegenover, dat wij jou bedanken met glimlachen en dankbaarheid :)</p>
 
-	<p><a href="{{base_url}}/how-to-use-this-toolkit" class="call-to-action simple-button green">Next: How to use this toolkit →</a></p>
+	<p><a href="{{base_url}}/how-to-use-this-toolkit" class="call-to-action simple-button green">Volgende: Hoe gebruik ik de gereedschapskist? →</a></p>
 
 {% endblock col1content %}
 
 {% block col2content %}
 <div class="callout">
-	<h3>Useful videos</h3>
+	<h3>Interessante video's</h3>
 	<span class="video-link"><iframe width="90%" height="150" src="http://www.youtube.com/embed/RoGgxrCsCEQ" frameborder="0" allowfullscreen></iframe></span>
 	<ul class="bullet">
-		<li><a href="http://www.khanacademy.org/talks-and-interviews/v/the-gates-notes---students-in-los-altos">Perspective of students (video)</a></li>
-		<li><a href="http://www.khanacademy.org/talks-and-interviews/v/the-gates-notes--administrators-in-los-altos">Perspective of administrators (video)</a></li>
+		<li><a href="http://www.khanacademy.org/talks-and-interviews/v/the-gates-notes---students-in-los-altos">Het perspectief van leerlingen (video)</a></li>
+		<li><a href="http://www.khanacademy.org/talks-and-interviews/v/the-gates-notes--administrators-in-los-altos">Het perspectief van beeerders (video)</a></li>
     </ul>
 </div>
 {% endblock col2content %}
