Link naar pilot

--- a/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
+++ b/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
@@ -23,7 +23,7 @@
 			<li>les geven door het combineren van disciplines</li>
 		</ul>
 
-	<p>Wanneer je geïnteresseerd bent in het gebruik van de Khan Academie voor dergelijke doeleinden <a href="http://elizabethka.wufoo.com/forms/innovate-in-the-classroom-with-khan-academy/"> meld je dan hier aan</a>.</p>
+	<p>Wanneer je geïnteresseerd bent in het gebruik van de Khan Academie voor dergelijke doeleinden <a href="https://docs.google.com/a/khanacademie.nl/spreadsheet/viewform?formkey=dFZYRWdsSnJYakF4a1dyYm92UUh3dmc6MQ#gid=0"> meld je dan hier aan</a>.</p>
 
 	<p><a href="{{base_url}}/toolkit-sections" class="call-to-action simple-button green">Volgende: onderdelen van deze site →</a></p>
 
