--- a/javascript/exercises-package/problem-template.handlebars
+++ b/javascript/exercises-package/problem-template.handlebars
@@ -21,12 +21,12 @@
 			<input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px">
 			<div id="answercontent" class="info-box">
 				<span id="examples-show">Acceptable formats</span>
-				<span class="info-box-header">Answer</span>
+				<span class="info-box-header">Antwoord</span>
 				<div id="solutionarea" class="fancy-scrollbar"></div>
 				<ul id="examples" style="display: none"></ul>
 				<div class="answer-buttons">
-				<input type="button" class="simple-button green" id="check-answer-button" tabindex="10" value="Check Answer"/>
-				<input type="button" class="simple-button green" id="next-question-button" style="display:none;" name="correctnextbutton" value="Correct! Next Question..."/>
+				<input type="button" class="simple-button green" id="check-answer-button" tabindex="10" value="Check Antwoord"/>
+				<input type="button" class="simple-button green" id="next-question-button" style="display:none;" name="correctnextbutton" value="Correct! Volgende vraag..."/>
 				<div id="positive-reinforcement"><img src="/images/face-smiley.gif" /></div>
 				<span id="show-solution-button-container"></span>
 				<div id="check-answer-results"><p class="check-answer-message info-box-sub-description"></p></div>
@@ -38,9 +38,9 @@
 				<span class="info-box-sub-description">To work on problems like this, <a id="readonly-start" href="">start this exercise</a>.</span>
 			</div>
 			<div class="info-box hint-box">
-				<span class="info-box-header">Need help?</span>
+				<span class="info-box-header">Hulp nodig?</span>
 				<div id="get-hint-button-container">
-					<input id="hint" type="button" class="simple-button orange full-width" value="I'd like a hint" name="hint"/>
+					<input id="hint" type="button" class="simple-button orange full-width" value="Help mij" name="hint"/>
 				</div>
 				<span id="hint-remainder"></span>
 			</div>
@@ -65,19 +65,19 @@
 					<ul>
 						<li>
 							<input type="radio" name="issue-type" id="issue-wrong-or-unclear">
-							<label for="issue-wrong-or-unclear">Answer is wrong or question is unclear</label>
+							<label for="issue-wrong-or-unclear">Het antwoord is fout of de vraag is onduidelijk</label>
 						</li>
 						<li>
 							<input type="radio" name="issue-type" id="issue-hard">
-							<label for="issue-hard">I'm frustrated (tell us why) or this is too hard</label>
+							<label for="issue-hard">Ik ben gefrustreed (leg uit waarom) of dit is te moeilijk</label>
 						</li>
 						<li>
 							<input type="radio" name="issue-type" id="issue-not-showing">
-							<label for="issue-not-showing">I can't see the problem or website is stuck</label>
+							<label for="issue-not-showing">Ik kan de opgaven niet zien of de website werkt niet</label>
 						</li>
 						<li>
 							<input type="radio" name="issue-type" id="issue-other">
-							<label for="issue-other">Other (please describe below)</label>
+							<label for="issue-other">Anders (Beschrijf hieronder)</label>
 						</li>
 					</ul>
 				</fieldset>
