--- a/javascript/exercises-package/end-of-review-card.handlebars
+++ b/javascript/exercises-package/end-of-review-card.handlebars
@@ -1,16 +1,16 @@
 <div class="end-of-stack-info">
     <div class="title clearfix">
         {{#if reviewsLeft}}
-        <h2>You have {{pluralize reviewsLeft "skill"}} left to review...</h2>
+        <h2>Je hebt {{pluralize reviewsLeft "vaardigheid"}} over om te herzien...</h2>
         {{else}}
-        <h2>You're done reviewing!</h2>
+        <h2>Je ben klaar met oefenen!</h2>
         {{/if}}
     </div>
     <div class="stack-controls">
         {{#if reviewsLeft}}
-        <input type="button" class="take-a-break to-dashboard simple-button left" value="Pick something else to work on"><input type="button" class="more-stacks default-action simple-button green right" value="Keep reviewing!">
+        <input type="button" class="take-a-break to-dashboard simple-button left" value="Kies iets anders uit om te oefenen"><input type="button" class="more-stacks default-action simple-button green right" value="Blijf oefenen!">
         {{else}}
-        <input type="button" class="take-a-break to-dashboard default-action simple-button left" value="Head back to your exercise dashboard">
+        <input type="button" class="take-a-break to-dashboard default-action simple-button left" value="Ga terug naar jouw oefeningen pagina">
         {{/if}}
     </div>
 </div>
