--- a/javascript/exercises-package/happy-picture-card.handlebars
+++ b/javascript/exercises-package/happy-picture-card.handlebars
@@ -1,7 +1,7 @@
 <div class="happy-picture">
     <h4 class="caption">{{caption}}</h4>
 
-	<input type="button" class="simple-button green" id="next-question-button" value="Next Question..."/><br>
+	<input type="button" class="simple-button green" id="next-question-button" value="Volgende vraag..."/><br>
 
     <div class="img-container"><img class="vertical-shadow" src="{{src}}"></div>
 </div>
