--- a/javascript/exercises-package/problem-template.handlebars
+++ b/javascript/exercises-package/problem-template.handlebars
@@ -35,7 +35,7 @@
 			<div id="readonly" class="info-box">
 				<span id="readonly-problem" class="info-box-header"></span>
 				<span id="readonly-title" class="info-box-subheader">You are viewing a problem.</span>
-				<span class="info-box-sub-description">To work on problems like this, <a id="readonly-start" href="">start this exercise</a>.</span>
+				<span class="info-box-sub-description">Werk aan een probleem zoals deze, <a id="readonly-start" href="">begin met deze oefening</a>.</span>
 			</div>
 			<div class="info-box hint-box">
 				<span class="info-box-header">Hulp nodig?</span>
@@ -46,10 +46,10 @@
 			</div>
 			<div class="info-box related-video-box" style="display:none;">
 				<div id="related-video-content">
-					<span class="info-box-header">Stuck? Watch a video.</span>
+					<span class="info-box-header">Problemen? Bekijk een filmpje.</span>
 
 					<div id="related-video-list">
-						<span class="related-content-title">Related videos:</span>
+						<span class="related-content-title">Gerelateerde filmpjes:</span>
 						<ul class="related-video-list"></ul>
 					</div>
 					<div class="clear"></div>
@@ -57,7 +57,7 @@
 			</div>
 		</form>
 		<div id="issue" class="info-box" style="display:none;">
-			<span class="info-box-header">Report a Problem</span>
+			<span class="info-box-header">Rapporteer een probleem</span>
 			<span id="issue-status" class="info-box-sub-description"></span>
 			<form>
 				<fieldset>
@@ -81,9 +81,9 @@
 						</li>
 					</ul>
 				</fieldset>
-				<label for="issue-title">Issue Title:<input type="text" name="issue-title" id="issue-title" /></label>
-				<label for="issue-email">Your Email (optional):<input type="text" name="issue-email" id="issue-email" /></label>
-				<label for="issue-body">Description of Issue:<textarea name="issue-body" id="issue-body"></textarea></label>
+				<label for="issue-title">Onderwerp:<input type="text" name="issue-title" id="issue-title" /></label>
+				<label for="issue-email">Jouw email (optioneel):<input type="text" name="issue-email" id="issue-email" /></label>
+				<label for="issue-body">Beschrijving van het probleem:<textarea name="issue-body" id="issue-body"></textarea></label>
 				<input type="submit" class="simple-button" value="Submit Issue">
 				<a href="/#" id="issue-cancel">Cancel</a>
 				<img id="issue-throbber" style="display:none;" name="issue-throbber">
