--- a/javascript/exercises-package/problem-template.handlebars
+++ b/javascript/exercises-package/problem-template.handlebars
@@ -8,7 +8,7 @@
 </div>
 <div id="warning-bar">
 	<span id="warning-bar-content"></span>
-	<span id="warning-bar-close">(<a href="">close</a>)</span>
+	<span id="warning-bar-close">(<a href="">sluit</a>)</span>
 </div>
 <div id="problem-and-answer">
 	<div id='problemarea'>
@@ -20,7 +20,7 @@
 		<form id="answerform" action="/exercisedashboard" method="get" name="answerform">
 			<input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px">
 			<div id="answercontent" class="info-box">
-				<span id="examples-show">Acceptable formats</span>
+				<span id="examples-show">Antwoordformaat</span>
 				<span class="info-box-header">Antwoord</span>
 				<div id="solutionarea" class="fancy-scrollbar"></div>
 				<ul id="examples" style="display: none"></ul>
@@ -35,7 +35,7 @@
 			<div id="readonly" class="info-box">
 				<span id="readonly-problem" class="info-box-header"></span>
 				<span id="readonly-title" class="info-box-subheader">You are viewing a problem.</span>
-				<span class="info-box-sub-description">Werk aan een probleem zoals deze, <a id="readonly-start" href="">begin met deze oefening</a>.</span>
+				<span class="info-box-sub-description">Wil je een soortgelijke oefening doen, <a id="readonly-start" href="">begin met deze oefening</a>.</span>
 			</div>
 			<div class="info-box hint-box">
 				<span class="info-box-header">Hulp nodig?</span>
