--- a/javascript/exercises-package/calculating-card.handlebars
+++ b/javascript/exercises-package/calculating-card.handlebars
@@ -5,15 +5,15 @@
     </div>
 
     <h2 class="calc-text-spin">
-        <span>Counting hard-earned leaves...</span>
-        <span>Crunching hard numbers...</span>
-        <span>Calculating streaks...</span>
-        <span>Updating proficiency...</span>
+        <span>Tellen van welverdiende blaadjes...</span>
+        <span>Getallen verwerken...</span>
+        <span>Berekenen van series...</span>
+        <span>Bijwerken van voortgang...</span>
 
         <!-- silly spin messages -->
-        <span class="egg" data-prob=".07">Reticulating splines...</span>
-        <span class="egg" data-prob=".03">Doublechecking with Toby...</span>
-        <span class="egg" data-prob=".005">Consulting with Sal...</span>
+        <span class="egg" data-prob=".07">Hyperlinks bijbestellen...</span>
+        <span class="egg" data-prob=".03">Navragen bij Toby de hond...</span>
+        <span class="egg" data-prob=".005">Overleggen met Sal...</span>
     </h2>
 
     <img class="throbber" src="/images/throbber.gif">
