--- a/javascript/exercises-package/card-leaves.handlebars
+++ b/javascript/exercises-package/card-leaves.handlebars
@@ -1,13 +1,13 @@
 <div class="leaves clearfix">
-    <div class="leaf {{leaves.0.state}}" data-desc="Earn this leaf for completing this card.">
+    <div class="leaf {{leaves.0.state}}" data-desc="Verdien dit blaadje door vraag te beantwoorden.">
         <div class="full-leaf">
         </div>
     </div>
-    <div class="leaf {{leaves.1.state}}" data-desc="Earn this leaf for completing this card without using all of the hints.">
+    <div class="leaf {{leaves.1.state}}" data-desc="Verdien dit blaadje door vraag te beantwoorden zonder alle hints te gebruiken.">
     	<div class="full-leaf">
         </div>
     </div>
-    <div class="leaf {{leaves.2.state}}" data-desc="Earn this leaf for answering correctly on your first try without any hints.">
+    <div class="leaf {{leaves.2.state}}" data-desc="Verdien dit blaadje door in 1 keer vraag te beantwoorden zonder hint te gebruiken.">
     	<div class="full-leaf">
         </div>
     </div>
