--- a/javascript/exercises-package/current-card.handlebars
+++ b/javascript/exercises-package/current-card.handlebars
@@ -9,8 +9,8 @@
 		<!-- TODO: Toggle scratchpad display -->
 		<ul>
 			<li>
-				<a id="scratchpad-show" href="">Show scratchpad</a>
-				<span id="scratchpad-not-available">Scratchpad not available</span>
+				<a id="scratchpad-show" href="">Toon kladblok</a>
+				<span id="scratchpad-not-available">Kladblok niet beschikbaar</span>
 			</li>
 		</ul>
 	</div>
