--- a/javascript/exercises-package/exercise-header.handlebars
+++ b/javascript/exercises-package/exercise-header.handlebars
@@ -11,7 +11,7 @@ Review
             &nbsp;<!-- Practice exercises don't have badge images, just a placeholder -->
         </span>
     </div>
-    <span class="practice-exercise-topic-context">Practicing</span> {{practiceExercise.displayName}}
+    <span class="practice-exercise-topic-context">Oefen</span> {{practiceExercise.displayName}}
     <span class="practice-exercise-topic-context">in </span>
     <span class="practice-exercise-topic-context solid-hover">
         <img class="topic-exercise-image inline" src="{{topicExerciseBadge.icons.compact}}">
@@ -26,7 +26,7 @@ Review
     {{/if}}
 {{/if}}
 <div class="streak-transition">
-    <span class="hover-disclosure">What happened to the streak bar?</span>
+    <span class="hover-disclosure">Hoe werkt dit?</span>
     <div class="expl-image vertical-shadow">
         <img src="/images/power-mode/streak-transition.png?4" />
     </div>
