--- a/javascript/exercises-package/end-of-review-card.handlebars
+++ b/javascript/exercises-package/end-of-review-card.handlebars
@@ -3,7 +3,7 @@
         {{#if reviewsLeft}}
         <h2>Je hebt {{pluralize reviewsLeft "vaardigheid"}} over om te herzien...</h2>
         {{else}}
-        <h2>Je ben klaar met oefenen!</h2>
+        <h2>Je bent klaar met oefenen!</h2>
         {{/if}}
     </div>
     <div class="stack-controls">
