--- a/javascript/discussion-package/answer.handlebars
+++ b/javascript/discussion-package/answer.handlebars
@@ -5,7 +5,7 @@
     </div>
 
     <div class="answer_sig sig">
-        <a class="author-nickname" data-user-id="{{authorUserId}}">{{authorNickname}}</a> answered
+        <a class="author-nickname" data-user-id="{{authorUserId}}">{{authorNickname}}</a> heeft beantwoord
         <a class="timeago" href="?qa_expand_key={{questionKey}}" title="{{date}}">{{date}}</a>
         {{> flag-controls}}
 
@@ -25,7 +25,7 @@
             <div class="controls">
                 <input class="simple-button answer_submit"
                        type="button" 
-                       value="Edit this answer" />
+                       value="Bewerk dit antwoord" />
                 or <a href="javascript:void(0)" class="answer_cancel control">Cancel</a>
             </div>
             <div class="clearFloat">&nbsp;</div>
