--- a/javascript/discussion-package/author-controls.handlebars
+++ b/javascript/discussion-package/author-controls.handlebars
@@ -1,7 +1,7 @@
 {{#if showAuthorControls}}
 <span class="mod_tools" data-is-author="{{showAuthorControls}}">
-    <a href="#" class="control mod_edit" data-key="{{key}}">edit</a>
-    | <a href="#" class="control mod_delete" data-key="{{key}}">delete</a>
+    <a href="#" class="control mod_edit" data-key="{{key}}">bewerk</a>
+    | <a href="#" class="control mod_delete" data-key="{{key}}">verwijder</a>
     <span class="message"></span>
 </span>
 {{/if}}
