--- a/javascript/discussion-package/question-guide.handlebars
+++ b/javascript/discussion-package/question-guide.handlebars
@@ -1,40 +1,40 @@
 <div class="sticky_note" style="display:none;">
     <div class="sticky_note_content">
-        <h2>Ask a great question</h2>
+        <h2>Stel een briljante vraag</h2>
         <table class="tips-and-examples">
             <tr>
                 <th class="cell left-cell">
-                    <h4>Be specific, and refer to a time in the video:</h4>
+                    <h4>Wees specifiek, refereer aan een tijd in de video:</h4>
                     <ul>
                         <li class="question-example">
-                            "During the eclipse Sal talks about at 5:28,
-                             why is the moon the exact size of the sun,
-                             offering complete 1 for 1 coverage?"
+                            "Bij de maansverduistering waar Sal over praat na 5:28,
+                             waarom is de maan precies even groot als de zon,
+                            zodat de zon volledig wordt verduisterd?"
                         </li>
                     </ul>
                 </th>
                 <th class="cell other-choices">
-                    <h4>Have something that's not a question about this video?</h4>
+                    <h4>Heb je een vraag die niet over deze video gaat?</h4>
                     <ul>
                         <li>
                             <a class="comment_not_question" href="#">
-                                Comment on the video
+                                Commentaar op de video
                             </a>
                         </li>
                         <li>
                             <a href="http://khanacademy.desk.com">
-                                Ask a question about the site
+                                Stel een vraag over deze site
                             </a>
                         </li>
                         <li>
                             <a href="/reportissue?type=Defect&issue_labels=Component-Videos">
-                                Report a problem
+                                Meld een probleem
                             </a>
                         </li>
                     </ul>
                 </th>
             </tr>
         </table>
-        <h4>This discussion area is not meant for answering homework problems.</h4>
+        <h4>Dit discussieforum is niet om huiswerkproblemen te bespreken.</h4>
     </div>
 </div>
