--- a/javascript/discussion-package/questions-area.handlebars
+++ b/javascript/discussion-package/questions-area.handlebars
@@ -14,7 +14,7 @@
             <div class="question_placeholder requires_script">
                 <textarea name="question_text"
                           class="question_text"
-                          placeholder="Ask a question about this video">
+                          placeholder="Stel een vraag over deze video">
                 </textarea>
             </div>
 
@@ -24,7 +24,7 @@
                     <div class="controls">
                         <input class="simple-button green question_submit"
                                type="button"
-                               value="Ask your question" />
+                               value="Stel je vraag" />
                         or <a href="#" class="question_cancel control">Cancel</a>
                     </div>
                     <div class="chars_remaining">
